Cascading Change Log

2.7.0 [unreleased]

  Fixed issue where a failure to open or write a trap would pass the throwable up to the prior trap. Failures on trap
  io will now result in a c.f.Flow failure.

  Fixed issue where c.t.TupleEntry#setTuple( Tuple tuple ) and c.t.TupleEntry#setCanonicalTuple( Tuple tuple ) would
  cause an NPE if given an null argument.

  Updated trap handling to capture diagnostic information within a trap when configured via a c.t.TrapProps instance.

  Added the c.t.TrapProp class to provide fine grained configuration over c.t.Tap traps per c.f.Flow or per
  c.t.Tap instances.

  Updated c.t.u.TupleHasher to use MurmurHash3 32bit for hashCode calculation. Users relying on the old hashCode
  implementation for partitioning can set "cascading.tuple.hadoop.util.hasherpartitioner.uselegacyhash" to true.

  Updated c.f.h.HadoopPlanner and c.f.h2.Hadoop2MR1Planner to log a warning if a flow is being run on the wrong version
  of Hadoop.

  Fixed issue where c.m.a.URISanitizer would fail parsing glob expressions.

  Added ability to provide a custom cache to be used in c.p.a.AggregateBy and c.p.a.Unique.

  Added ability to use custom properties in the various invoke methods in c.CascadingTestCase to simplify testing of
  functions, filters, buffers and aggregators.

  Updated c.f.h.ProcessFlow to support optional counters provided by Riffle based flows.

  Updated c.p.AppProps and c.p.UnitOfWorkDef to log a warning if a tag contains whitespace characters.

  Fixed issue where c.c.CascadeDef was allowing multiple flows with the same sink to be part of a Cascade.

  Updated c.f.h.MapReduceFlow to support both the org.apache.hadoop.mapred.* and org.apache.hadoop.mapreduce.* APIs.

  Fixed issue where c.t.TupleEntrySchemeIterator was not behaving correctly if #hasNext() is called multiple times
  without calling #next().

  Fixed issue where c.f.h.ProcessFlow would not report Exceptions to registered FlowListeners.
