@@ -2,6 +2,8 @@ Cascading Change Log
 
 2.7.0 [unreleased]
 
+  Fixed issue where c.t.h.PartitionTap would not throw an error if 'cascading.hadoop.hfs.combine.files' was enabled.
+
   Fixed issue where a failure to open or write a trap would pass the throwable up to the prior trap. Failures on trap
   io will now result in a c.f.Flow failure.
 
